<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="movie_poster">Movie Poster</string>
    <string name="unknown">Unknown</string>
    <string name="title">Title:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="release_date">Release date:</string>
    <string name="status">Status:</string>
    <string name="rating">Rating:</string>
    <string name="votes_amount">Votes amount:</string>
    <string name="error_while_loading_movie">Error while loading movie</string>
    <string name="reload">Reload</string>
</resources>